Solana <> EVM integration testing (#64)
* evm: setup anvil script

* e2e: rename directory; fix run_test.sh to use anchor

* solana: make anchor-test-setup

* evm: update deployment script for e2e

* e2e: add dummy solana registrations

* e2e: read evm envs

* e2e: fix packages

* e2e: another attempt

* e2e: add function to return swap layer contract

* e2e: handle evm setup

* e2e: fix deployment and add outbound direct test

* e2e: add inbound direct test

* e2e: add solana direct test

* e2e: add relaying tests

* e2e: add gas swaps

* e2e: add gas swaps with relay (WIP)

* update makefile and package versions to fix import/resolution errors (#67)

* updates to make e2e tests use packages instead of direct access

* add foundry for solana anchor tests

* tmp

* remove package-lock from e2e dir

* update submodule version, fix import

* Remove the submodule completely instead of running its make clean target (#70)

* e2e: finish gas swap with relay tests

* e2e: add Other (Direct) swap type tests

* e2e: refactor tests

* solana: add other swap with relay

* e2e: update evm interface

* Add root make build command, improve clean targets (#71)

* e2e: update evm interface

* Add root make build command, improve clean targets

---------

Co-authored-by: gator-boi <gator-boi@users.noreply.github.com>

---------

Co-authored-by: gator-boi <gator-boi@users.noreply.github.com>
Co-authored-by: A5 Pickle <a5-pickle@users.noreply.github.com>
Co-authored-by: Ben Guidarelli <ben.guidarelli@gmail.com>

--- a/evm/Makefile
+++ b/evm/Makefile
@@ -33,7 +33,7 @@ LIB_DEPS = foundry-rs/forge-std
 LIB_DEPS += openzeppelin/openzeppelin-contracts@dc44c9f #4.9.6
 LIB_DEPS += Uniswap/permit2@cc56ad0 #latest commit as per 22/04/2024
 LIB_DEPS += wormhole-foundation/wormhole-solidity-sdk@b935ddc #post-merged branch
-LIB_DEPS += wormhole-foundation/example-liquidity-layer@80aebe9 #main branch
+LIB_DEPS += wormhole-foundation/example-liquidity-layer@f57444f #main branch
 
 # dynamically generate install rule for each lib dependency and add to depdenencies
 $(foreach dep,$(LIB_DEPS), $(eval $(call install_lib,$(dep))))
@@ -41,5 +41,5 @@ $(foreach dep,$(LIB_DEPS), $(eval $(call install_lib,$(dep))))
 clean:
 	forge clean
 	rm -rf lib
+	rm -rf node_modules
 	@$(MAKE) -C env clean
-
