--- a/evm/ts-sdk/package.json
+++ b/evm/ts-sdk/package.json
@@ -5,14 +5,15 @@
   "main": "lib/cjs/index.js",
   "module": "lib/esm/index.js",
   "scripts": {
-    "build": "tsc -p tsconfig.json && tsc -p tsconfig-cjs.json"
+    "build": "tsc -p tsconfig.json && tsc -p tsconfig-cjs.json",
+    "clean":"rm -rf dist"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@wormhole-foundation/sdk-base": "^0.7.0-beta.4",
-    "@wormhole-foundation/sdk-definitions": "^0.7.0-beta.4",
-    "@wormhole-foundation/sdk-evm": "^0.7.0-beta.4",
+    "@wormhole-foundation/sdk-base": "^0.7.0-beta.6",
+    "@wormhole-foundation/sdk-definitions": "^0.7.0-beta.6",
+    "@wormhole-foundation/sdk-evm": "^0.7.0-beta.6",
     "typescript": "^5.4.5"
   }
 }
