--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
+    "clean": "npm run clean --workspaces --if-present",
     "build": "npm run build --workspaces --if-present",
     "generate": "npm run generate --workspaces --if-present",
     "test": "npm run test --workspaces --if-present"
@@ -25,6 +26,7 @@
     "wormhole"
   ],
   "workspaces": [
+    "e2e",
     "evm/ts-sdk",
     "solana"
   ]
