--- a/solana/Cargo.toml
+++ b/solana/Cargo.toml
@@ -54,6 +54,9 @@ codegen-units = 1
 [workspace.lints.clippy]
 correctness = { level = "warn", priority = -1 }
 
+### See clippy.toml.
+unnecessary_lazy_evaluations = "allow"
+
 arithmetic_side_effects = "deny"
 as_conversions = "deny"
 cast_abs_to_unsigned = "deny"
