--- a/solana/Cargo.toml
+++ b/solana/Cargo.toml
@@ -30,7 +30,7 @@ path = "../universal/rs/messages"
 [workspace.dependencies]
 anchor-lang = "=0.30.0"
 anchor-spl = "=0.30.0"
-solana-program = "=1.18.14"
+solana-program = "=1.18.15"
 hex = "0.4.3"
 ruint = "1.9.0"
 cfg-if = "1.0"
@@ -53,6 +53,9 @@ codegen-units = 1
 
 [workspace.lints.clippy]
 correctness = { level = "warn", priority = -1 }
+
+### See clippy.toml.
+unnecessary_lazy_evaluations = "allow"
 
 arithmetic_side_effects = "deny"
 as_conversions = "deny"
