--- a/.github/workflows/solana.yml
+++ b/.github/workflows/solana.yml
@@ -16,6 +16,7 @@ jobs:
         uses: styfle/cancel-workflow-action@0.9.1
         with:
           access_token: ${{ github.token }}
+
   make-cargo-test-all:
     name: make cargo-test-all
     runs-on: ubuntu-latest
@@ -31,6 +32,7 @@ jobs:
       - name: make cargo-test-all
         run: make cargo-test-all
         working-directory: ./solana
+
   make-lint:
     name: make lint
     runs-on: ubuntu-latest
@@ -46,6 +48,7 @@ jobs:
       - name: make lint
         run: make lint
         working-directory: ./solana
+
   make-anchor-test:
     name: make anchor-test
     runs-on: ubuntu-latest
@@ -69,4 +72,29 @@ jobs:
         working-directory: ./solana
       - name: make anchor-test
         run: make anchor-test
+        working-directory: ./solana
+
+  make-check-build:
+    name: make check-build
+    runs-on: ubuntu-latest
+    # Anchor Docker image: https://www.anchor-lang.com/docs/verifiable-builds#images
+    # container: backpackapp/build:v0.30.0
+    steps:
+      - uses: actions/checkout@v4
+        with:
+          submodules: recursive
+      - name: Install Foundry
+        uses: foundry-rs/foundry-toolchain@v1
+        with:
+          version: nightly
+      - uses: metadaoproject/setup-anchor@v2
+        with:
+          node-version: "20.11.0"
+          solana-cli-version: "1.18.15"
+          anchor-version: "0.30.0"
+      - name: Set default Rust toolchain
+        run: rustup default stable
+        working-directory: ./solana
+      - name: make check-build
+        run: make check-build
         working-directory: ./solana
