--- a/.github/workflows/solana.yml
+++ b/.github/workflows/solana.yml
@@ -3,20 +3,11 @@ on:
   push:
     branches:
       - main
-      - solana/integration
-  pull_request: null
+  pull_request:
 
 env:
   RUSTC_VERSION: 1.75.0
 jobs:
-  cancel-previous-runs:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Cancel Previous Runs
-        uses: styfle/cancel-workflow-action@0.9.1
-        with:
-          access_token: ${{ github.token }}
-
   make-cargo-test-all:
     name: make cargo-test-all
     runs-on: ubuntu-latest
