--- a/package.json
+++ b/package.json
@@ -11,16 +11,16 @@
     "test": "npm run test --workspaces --if-present"
   },
   "devDependencies": {
-    "typescript": "5.4.5",
     "@types/chai": "^4.3.5",
     "@types/jest": "^29.5.12",
     "@types/node": "^20.4.1",
-    "prettier": "^3.0.3",
+    "chai": "^4.3.7",
+    "chai-as-promised": "^7.1.1",
     "jest": "^29.7.0",
+    "prettier": "^3.0.3",
     "ts-jest": "^29.1.2",
     "ts-node": "^10.9.1",
-    "chai": "^4.3.7",
-    "chai-as-promised": "^7.1.1"
+    "typescript": "5.4.5"
   },
   "keywords": [
     "wormhole"
