--- a/solana/package.json
+++ b/solana/package.json
@@ -21,17 +21,17 @@
         "@certusone/wormhole-sdk": "^0.10.10",
         "@coral-xyz/anchor": "^0.30.0",
         "@jup-ag/api": "^6.0.20-test",
-        "@solana/spl-token": "^0.4.3",
-        "@solana/web3.js": "^1.91.6",
+        "@solana/spl-token": "^0.4.8",
+        "@solana/web3.js": "^1.95.3",
         "@types/node-fetch": "^2.6.11",
         "@wormhole-foundation/example-liquidity-layer-definitions": "file:../lib/example-liquidity-layer/wormhole-foundation-example-liquidity-layer-definitions-0.0.1.tgz",
         "@wormhole-foundation/example-liquidity-layer-evm": "file:../lib/example-liquidity-layer/wormhole-foundation-example-liquidity-layer-evm-0.0.1.tgz",
         "@wormhole-foundation/example-liquidity-layer-solana": "file:../lib/example-liquidity-layer/wormhole-foundation-example-liquidity-layer-solana-0.0.1.tgz",
-        "@wormhole-foundation/sdk-base": "^0.7.0-beta.6",
-        "@wormhole-foundation/sdk-definitions": "^0.7.0-beta.6",
-        "@wormhole-foundation/sdk-evm": "0.7.0-beta.6",
-        "@wormhole-foundation/sdk-solana": "^0.7.0-beta.6",
-        "@wormhole-foundation/sdk-solana-core": "^0.7.0-beta.6",
+        "@wormhole-foundation/sdk-base": "^0.10.9",
+        "@wormhole-foundation/sdk-definitions": "^0.10.9",
+        "@wormhole-foundation/sdk-evm": "^0.10.9",
+        "@wormhole-foundation/sdk-solana": "^0.10.9",
+        "@wormhole-foundation/sdk-solana-core": "^0.10.9",
         "anchor-0.29.0": "npm:@coral-xyz/anchor@^0.29.0",
         "chai-as-promised": "^7.1.1",
         "ts-results": "^3.3.0",
