--- a/.github/workflows/solana.yml
+++ b/.github/workflows/solana.yml
@@ -6,7 +6,10 @@ on:
   pull_request:
 
 env:
+  ANCHOR_VERSION: 0.30.1
+  NODE_VERSION: 20.11.0
   RUSTC_VERSION: 1.75.0
+  SOLANA_VERSION: 1.18.15
 jobs:
   make-cargo-test-all:
     name: make cargo-test-all
@@ -51,11 +54,18 @@ jobs:
         uses: foundry-rs/foundry-toolchain@v1
         with:
           version: nightly
-      - uses: metadaoproject/setup-anchor@v2
+      - uses: actions/setup-node@v4
         with:
-          node-version: "20.11.0"
-          solana-cli-version: "1.18.15"
-          anchor-version: "0.30.1"
+          node-version: ${{ env.NODE_VERSION }}
+      - name: Install Solana CLI tools
+        run: sh -c "$(curl -sSfL https://release.anza.xyz/v${{ env.SOLANA_VERSION }}/install)"
+        shell: bash
+      - name: Update PATH
+        run: echo "/home/runner/.local/share/solana/install/active_release/bin" >> $GITHUB_PATH
+        shell: bash
+      - name: Install Anchor
+        run: npm i -g @coral-xyz/anchor-cli@${{ env.ANCHOR_VERSION }}
+        shell: bash
       - name: Set default Rust toolchain
         run: rustup default stable
         working-directory: ./solana
