--- a/evm/Makefile
+++ b/evm/Makefile
@@ -41,5 +41,5 @@ $(foreach dep,$(LIB_DEPS), $(eval $(call install_lib,$(dep))))
 clean:
 	forge clean
 	rm -rf lib
-	rm -rf node_modules
+	cd ts-sdk && npm run clean
 	@$(MAKE) -C env clean
